--- a/index.html
+++ b/index.html
@@ -2,10 +2,31 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet"> 
         <link rel="stylesheet" href="./style.css">
         <title>Landing Page</title>
     </head>
     <body>
-        <h1>This website is awesome</h1>
+        <div class="hero">
+            <div class="nav-bar container">
+                <div class="header">Header Logo</div>
+                <div class="nav-links">
+                    <a href="#">header link one</a>
+                    <a href="#">header link two</a>
+                    <a href="#">header link three</a>
+                </div>
+            </div>
+            <div class="hero-content container">
+                <div class="left-hero">
+                    <h1>This website is awesome</h1>
+                    <p class="secondary">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
+                </div>
+                <div class="right-hero">
+                    <div class="img-place">this is a placeholder for an image</div>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
