--- a/index.html
+++ b/index.html
@@ -28,5 +28,41 @@
                 </div>
             </div>
         </div>
+        <div class="info container">
+            <h2>Some random information.</h2>
+            <div class="card-section">
+                <div class="card">
+                    <div class="card-image"></div>
+                    <p>
+                        this is some subtext under an illustration or image
+                    </p>
+                </div>
+                <div class="card">
+                    <div class="card-image"></div>
+                    <p>
+                        this is some subtext under an illustration or image
+                    </p>
+                </div>
+                <div class="card">
+                    <div class="card-image"></div>
+                    <p>
+                        this is some subtext under an illustration or image
+                    </p>
+                </div>
+                <div class="card">
+                    <div class="card-image"></div>
+                    <p>
+                        this is some subtext under an illustration or image
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="quote-section">
+            <div>
+                <h3>
+                    This is an inspiring quote, or a testimonial from a customer...
+                </h3>
+            </div>
+        </div>
     </body>
 </html>
