--- a/index.html
+++ b/index.html
@@ -58,10 +58,13 @@
             </div>
         </div>
         <div class="quote-section">
-            <div>
-                <h3>
-                    This is an inspiring quote, or a testimonial from a customer...
-                </h3>
+            <div class="quote-container">
+                <p class="quote">
+                    This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.
+                </p>
+                <p class="author">
+                    - Thor, God of Thunder
+                </p>
             </div>
         </div>
     </body>
