--- a/index.html
+++ b/index.html
@@ -67,5 +67,22 @@
                 </p>
             </div>
         </div>
+        <div class="cta-section">
+            <div class="container">
+                <div class="cta-modal">
+                    <div class="cta-content">
+                        <div class="main-text">
+                            Call to action! It's time!
+                        </div>
+                        <p>
+                            Sign up for our product by clicking that button right over there!
+                        </p>
+                    </div>
+                    <button>
+                        Sign up
+                    </button>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
