--- a/index.html
+++ b/index.html
@@ -84,5 +84,10 @@
                 </div>
             </div>
         </div>
+        <div class="footer">
+            <div>
+                Copyright © The Odin Project 2021
+            </div>
+        </div>
     </body>
 </html>
