--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
                 <div class="left-hero">
                     <h1>This website is awesome</h1>
                     <p class="secondary">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
+                    <button>Sign up</button>
                 </div>
                 <div class="right-hero">
                     <div class="img-place">this is a placeholder for an image</div>
